<resources>
    <string name="app_name">lslm</string>
    <string name="help">帮助</string>
    <string name="lslm">立刷联盟</string>
    <string name="phonenumber">请输入手机号码</string>
    <string name="input_verificationcode">请输入验证码</string>
    <string name="get_verificationcode">获取验证码</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="change_method_login">换个方式登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="agreement">登录即代表您已同意立刷服务协议</string>
    <string name="hello">hello world</string>
    <string name="password">请输入登录密码</string>
    <string name="verificode_login">验证码登录</string>
    <string name="findpassword">找回密码</string>
    <string name="inputpassword">请输入密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="confirm">确认</string>
    <string name="input_phonenumber">请输入手机号码</string>
    <string name="next_step">下一步</string>
    <string name="input_invitationcode">请输入邀请码</string>
    <string name="reget_verifycode">重新获取验证码</string>
    <string name="baseUrl">http://192.168.1.134:9081/vba-api/</string>
</resources>
