<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@null"
    tools:context=".MainActivity">
    <!--顶端-->
    <LinearLayout
        style="@style/topLine">
        <ImageButton
            style="@style/imageButton"
            android:id="@+id/close_btn"
            android:src="@drawable/close" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:gravity="right">
        <TextView
            style="@style/textView"
            android:id="@+id/helpView"
            android:text="@string/help"
            android:textSize="19sp"
            android:textColor="#252525"
             />
        </LinearLayout>
    </LinearLayout>

    <!--中间图标-->
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logoicon" />
        <TextView
            style="@style/textView"
            android:layout_marginTop="11dp"
            android:text="@string/lslm"
            android:textColor="#ff0a0204"
            android:textSize="18sp"/>
    </LinearLayout>

    <!--账号密码-->
    <LinearLayout
        style="@style/wrapLiner"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:showDividers="middle|end">
        <LinearLayout
            style="@style/inputLine">
                <ImageView
                    style="@style/imageInput"
                    android:src="@drawable/accountnumber" />
                <EditText
                    style="@style/InputEditText"
                    android:id="@+id/phoneNumber"
                    android:maxLength="11"
                    android:inputType="number"
                    android:hint="@string/phonenumber"
                    />
        </LinearLayout>
        <LinearLayout
            style="@style/inputLine">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    style="@style/imageInput"
                    android:src="@drawable/password" />
                <EditText
                    style="@style/InputEditText"
                    android:id="@+id/loginPassword"
                    android:hint="@string/password"
                    android:maxLength="16"
                    android:inputType="textPassword" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <ImageView
                        android:id="@+id/display"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/imageselect" />
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>

    <!--提示语-->
    <LinearLayout
        style="@style/wrapLiner"
        android:layout_marginTop="10dp">
        <TextView
            style="@style/textView"
            android:id="@+id/forgetPassword"
            android:text="@string/forgetpassword" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <TextView
                android:id="@+id/getMessageCode"
                style="@style/textView"
                android:text="@string/verificode_login" />
        </LinearLayout>
    </LinearLayout>

    <!--登录注册按钮-->

    <LinearLayout
        style="@style/wrapLiner"
        android:showDividers="none"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <Button
            style="@style/button"
            android:id="@+id/loginBtn"
            android:textColor="#fafafa"
            android:text="@string/login" />
        <Button
            style="@style/button_none"
            android:id="@+id/register_btn"
            android:textColor="@drawable/register_textcolor"
            android:text="@string/register">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="31dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom">
        <ImageView
            android:id="@+id/radioView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/radio" />
        <TextView
            android:id="@+id/gree"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:text="@string/agreement"
            android:textColor="#ff969696"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>