<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@null"
    android:orientation="vertical">
    <!--顶部-->
    <LinearLayout
        style="@style/topLine">
        <ImageView
            android:id="@+id/reback"
            android:gravity="center"
            style="@style/imageButton"
            android:src="@drawable/arrow" />

        <TextView
            style="@style/textView"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/findpassword"
            android:textColor="#ff252525"
            android:textSize="19sp" />
    </LinearLayout>

    <!--中间部分-->
    <LinearLayout
        style="@style/wrapLiner"
        android:orientation="vertical"
        android:layout_marginTop="64dp">
        <LinearLayout
            style="@style/inputLine">
            <ImageView
                style="@style/imageInput"
                android:src="@drawable/accountnumber"/>
            <EditText
                style="@style/InputEditText"
                android:maxLength="11"
                android:inputType="number"
                android:hint="@string/input_phonenumber"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/inputLine">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">

                 <ImageView
                     style="@style/imageInput"
                     android:src="@drawable/verificationcode"/>
                 <EditText
                     style="@style/InputEditText"
                     android:hint="@string/input_verificationcode"
                     />
             </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <TextView
                    android:id="@+id/getVerifyCode"
                    android:layout_gravity="center"
                    style="@style/textView"
                    android:padding="7dp"
                    android:background="@drawable/shape_findpassword"
                    android:textColor="#fafafa"
                    android:text="@string/get_verificationcode" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/wrapLiner"
        android:showDividers="none"
        android:orientation="vertical"
        android:layout_marginTop="37dp">
        <Button
            style="@style/button"
            android:id="@+id/next_step"
            android:text="@string/next_step"
            android:textColor="#fafafa"
             />
    </LinearLayout>


</LinearLayout>